Disable SSL reject on Theia
Incompatible with Ceph RGW as it needs to listen on 443.

--- a/inventory/host_vars/theia/nginx/main.yml
+++ b/inventory/host_vars/theia/nginx/main.yml
@@ -1,5 +1,7 @@
 ---
 
+# Conflicts with Ceph RGW ingress
+nginx_default_reject_ssl: false
 nginx_nis_enabled: true
 nginx_listen_address: "{{ host_ips.vm }}"
 nginx_ports:
