--- a/inventory/group_vars/gui/arch.yml
+++ b/inventory/group_vars/gui/arch.yml
@@ -100,6 +100,7 @@ base_pacman_packages:
   - sshfs
   - sshpass
   - sudo
+  - systemd-resolvconf  # Required by Wireguard
   - texinfo
   - tmux
   - ttf-fira-code
