Laptop and GUI updates
GUI:
- Install kubectl and podman
- Make sure Xorg is installed when using i3
- Replace swaylock-effects with swaylock

Laptop:
- Install blueman, polkit agent and virt-manager
- Sign fwupd with sbctl
- Update chezmoi overrides for new laptop
- Ensure my user is part of input group, required for fingerprint scanner

--- a/inventory/group_vars/gui/arch.yml
+++ b/inventory/group_vars/gui/arch.yml
@@ -57,6 +57,7 @@ base_pacman_packages:
   - jq
   - kernel-modules-hook
   - kitty
+  - kubectl
   - libpulse
   - libtool
   - libva-utils
@@ -82,6 +83,8 @@ base_pacman_packages:
   - pacutils
   - patch
   - pkgconf
+  - podman
+  - podman-compose
   - pyenv
   - python-aiohttp
   - python-jmespath  # ansible json filter
@@ -151,6 +154,7 @@ pacman_i3_packages:
   - thunar
   - thunar-archive-plugin
   - xclip
+  - xorg-server
   - xorg-xev
   - xorg-xinit
   - xorg-xinput
@@ -178,5 +182,5 @@ pacman_sway_packages:
   - xorg-xwayland
 
 aur_sway_packages:
-  - swaylock-effects-git
+  - swaylock
   - wdisplays
