--- a/inventory/group_vars/prom/grafana.yml
+++ b/inventory/group_vars/prom/grafana.yml
@@ -10,19 +10,13 @@ grafana_address: "0.0.0.0"
 grafana_port: 3000
 grafana_dashboards_dir: "{{ repo_base_dir }}/files/grafana/dashboards"
 
-smtp_host: "{{ smtp_config[hostvars['dresrv'].domain].host }}"
-smtp_pass: "{{ smtp_config[hostvars['dresrv'].domain].pass }}"
-smtp_port: "{{ smtp_config[hostvars['dresrv'].domain].port }}"
-smtp_user: "{{ smtp_config[hostvars['dresrv'].domain].user }}"
-
 grafana_security:
   admin_user: "{{ grafana_admin_user }}"
   admin_password: "{{ grafana_admin_pass }}"
 grafana_smtp:
-  host: "{{ smtp_host }}:{{ smtp_port }}"
-  user: "{{ smtp_user }}"
-  password: "{{ smtp_pass }}"
-  from_address: "grafana@{{ hostvars['dresrv'].domain }}"
+  host: "{{ hostvars['drepi'].postfix_hostname }}:587"
+  from_address: "grafana@{{ domains['hb'] }}"
+  startTLS_policy: "OpportunisticStartTLS"
 grafana_database:
   type: postgres
   host: "{{ hostvars['pg01'].ansible_host }}:5432"
